@@ -1,3 +1,5 @@
+import java.util.regex.Pattern
+
 buildscript {
     ext {
         springBootVersion = '2.6.4'
@@ -25,8 +27,6 @@ plugins {
     id 'org.sonarqube' version '3.3'
 }
 
-//apply from: 'liquibase.gradle'
-
 sonarqube {
     properties {
         property "sonar.projectKey", "turing-app"
@@ -38,9 +38,9 @@ sonarqube {
 
 jar {
     archiveBaseName = 'viglet-turing'
-    archiveVersion = '0.3.6'
+    archiveVersion = '0.3.5'
 }
-
+ 
 eclipse {
     classpath {
         file {
@@ -66,13 +66,23 @@ bootJar {
     archiveBaseName = 'viglet-turing'
 }
 
+bootRun {
+   jvmArgs = ["--add-modules", "java.se", 
+  "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+  "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+  "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+  "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+  "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
 repositories {
     mavenCentral()
 }
 
 group = 'com.viglet.turing'
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = 14
+targetCompatibility = 14
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
